--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,10 @@
 name: Commit Message Check
 
-on: [pull_request]
+on:
+  push:
+    branches:
+      - main
+      - XsQuare01
 
 jobs:
   check-commit-message:
@@ -11,7 +15,7 @@ jobs:
 
       - name: Get commit messages
         run: |
-          git log --format=%B -n 1 ${{ github.event.pull_request.head.sha }} > commit_msg.txt
+          git log --format=%B -n 1 ${{ github.event.head_commit.id }} > commit_msg.txt
 
       - name: Validate commit message
         run: |
